--- a/privacy.html
+++ b/privacy.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Blacklighter Films | Terms</title>
+  <title>Blacklighter Films | Privacy</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header class="wrap" style="padding-bottom:18px;">
     <div class="brand">
       <h1><a href="index.html">Blacklighter Films</a></h1>
-      <p class="tag">Terms of Service</p>
+      <p class="tag">Privacy Policy</p>
     </div>
     <nav class="nav">
       <a href="index.html#contact">Contact</a>
@@ -21,25 +21,26 @@
 
   <main class="wrap">
     <section class="card">
-      <h3>Terms</h3>
-      <p class="fineprint">Last updated: <span id="d"></span></p>
-      <p class="fineprint">
-        Blacklighter Films provides photography and video production services. By booking services,
-        you agree to the scope, pricing, and delivery terms confirmed in writing (invoice, email, or message).
-      </p>
+      <h3>Privacy</h3>
+<p class="fineprint">Last updated: <span id="d"></span></p>
 
-      <h4>Booking & Payment</h4>
-      <p class="fineprint">
-        A deposit may be required to reserve dates. Final payment is due before delivery of final files unless otherwise agreed.
-      </p>
+<h4>Information we collect</h4>
+<p class="fineprint">
+We may collect your name, email address, phone number, and project details when you contact us for quotes or bookings.
+</p>
 
-      <h4>Deliverables</h4>
-      <p class="fineprint">
-        Deliverables, turnaround time, and usage rights are defined per project.
-      </p>
+<h4>How we use information</h4>
+<p class="fineprint">
+We use this information to respond to inquiries, provide quotes, schedule services, deliver files, and communicate about your project.
+</p>
 
-      <h4>Contact</h4>
-      <p class="fineprint">Email: YOUR_EMAIL@domain.com</p>
+<h4>Sharing</h4>
+<p class="fineprint">
+We do not sell your personal information. We only share information when required to provide services (for example, payment processing) or if legally required.
+</p>
+
+<h4>Contact</h4>
+<p class="fineprint">support@kaymacktechnologies.com</p>
     </section>
   </main>
 
