--- a/terms.html
+++ b/terms.html
@@ -39,7 +39,7 @@
       </p>
 
       <h4>Contact</h4>
-      <p class="fineprint">Email: YOUR_EMAIL@domain.com</p>
+      <p class="fineprint">support@kaymacktechnologies.com</p>
     </section>
   </main>
 
