--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </p>
       <div class="cta">
         <a class="btn" href="#contact">Request a quote</a>
-        <a class="btn ghost" href="mailto:YOUR_EMAIL@domain.com">Email</a>
+        <a class="btn ghost" href="mailto:support@kaymacktechnologies.com">Email</a>
       </div>
       <p class="fineprint">Based in Texas • Remote and Travel</p>
     </section>
@@ -74,7 +74,7 @@
       <p>For bookings and quotes, email or call/text:</p>
 
       <div class="contact">
-        <div><strong>Email:</strong> <a href="mailto:YOUR_EMAIL@domain.com">support@kaymacktechnologies.com</a></div>
+        <div><strong>Email:</strong> <a href="mailto:support@kaymacktechnologies.com">support@kaymacktechnologies.com</a></div>
         <div><strong>Phone:</strong> <a href="tel:+1XXXXXXXXXX">+1 (512) 522-9096</a></div>
         <div><strong>Business:</strong> Blacklighter Films (DBA)</div>
       </div>
